--- a/q003/note003.ipynb
+++ b/q003/note003.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "# Answer:\n",
     "## Solution 1:\n",
-    "We use greedy algrithm. The longest substring without repeating chracters must be one of the substring that the first character is same as the that next to the substring. So we maintence a box that only contains substrings like that."
+    "We use greedy algrithm. The longest substring without repeating chracters must be one of the substring that the first character is same as the that next to the substring. So we maintence a box that only contains substrings like that.\n",
+    "\n",
+    "Note that python hide some detial. To reduce the time complexity, we use two instruction that may cause a large time: in and str.index(pos). For in, we can use a set, where make the opration O(1). For str.index(pos), we can have a dict, where mapping the charactor and its position, which make the opration O(1)."
    ]
   },
   {
